--- a/scss/main.css
+++ b/scss/main.css
@@ -283,7 +283,11 @@ main .container .contact__inner__phone__number {
   font-weight: 600;
 }
 main .container .contact__inner__text {
-  margin-top: 1rem;
+  margin: 1rem 0;
+}
+main .container .contact__inner__text-bold {
+  font-weight: 600;
+  text-align: center;
 }
 main .container .plan__img img {
   width: 100%;
