--- a/scss/_inner.scss
+++ b/scss/_inner.scss
@@ -238,8 +238,14 @@ main {
           }
         }
         &__text {
-          margin-top: 1rem;
+          margin: 1rem 0;
+
+          &-bold {
+            font-weight: 600;
+            text-align: center;
+          }
         }
+
       }
     }
 
